# freelude

./: README.md  freelude.cabal  package.yaml  stack.yaml
src/: Freelude.hs
src/Freelude/: FunctionRestrictedFunctor.hs
src/Freelude/Impl/: Category.hs  CategoryAsMonoid.hs  Classes.hs  Compat.hs  ExoFunctor.hs  MakeFunctor.hs  MonoidAsCategory.hs  RestrictedFunctor.hs  ToKind.hs
test/: DocTest.hs  Test.hs
