name:                freelude
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/clintonmead/freelude#readme
license:             BSD3
license-file:        LICENSE
author:              Clinton Mead
maintainer:          clintonmead@gmail.com
copyright:           Copyright: (c) 2017 Clinton Mead
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Freelude.Impl.Category
    Freelude.Impl.ExoFunctor
    Freelude.Impl.MonoidAsCategory
    Freelude.Impl.ToKind
  build-depends:       base >= 4.7 && < 5, indextype >= 0.2.1, containers, transformers
  default-language:    Haskell2010
  ghc-options: -Wall -fprint-explicit-kinds

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             Test.hs
  other-modules:
    Freelude.Impl.Category
    Freelude.Impl.ExoFunctor
    Freelude.Impl.MonoidAsCategory
    Freelude.Impl.ToKind
  build-depends:       base, indextype >= 0.2.1, containers, transformers
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/clintonmead/freelude
